--- a/index.html
+++ b/index.html
@@ -94,6 +94,30 @@ th {
         "effect": {0:0, 1:400},
         "current": 0
     },
+    "routineInspection": {
+        "max": 4,
+        "heat": {0:0, 1:2, 2:4, 3:6, 4:8},
+        "effect": {0:0, 1:3, 2:6, 3:9, 4:12},
+        "current": 0
+    },
+    "damageControl": {
+        "max": 2,
+        "heat": {0:0, 1:1, 2:2},
+        "effect": {0:0, 1:1, 2:2},
+        "current": 0
+    },
+    "approvalProcess": {
+        "max": 2,
+        "heat": {0:0, 1:2, 2:5},
+        "effect": {0:0, 1:1, 2:2},
+        "current": 0
+    },
+    "tightDeadline": {
+        "max": 3,
+        "heat": {0:0, 1:1, 2:3, 3:6},
+        "effect": {0:"inf", 1:9, 2:7, 3:5},
+        "current": 0
+    }
 
   }
 
@@ -134,8 +158,8 @@ function incrementCondition(condition, increment) {
         <td> Foes deal +<var id="hardLaborEffect">0</var>% damage</td>
         <td>
             <var id="hardLaborHeat">0</var> 
-            <button id="hardLaborIncrease" type="button" onclick="incrementCondition('hardLabor', 1)"> +1 </button>
-            <button id="hardLaborDecrease" type="button" onclick="incrementCondition('hardLabor', -1)" disabled> -1 </button>
+            <button id="hardLaborDecrease" type="button" onclick="incrementCondition('hardLabor', -1)" disabled> - </button>
+            <button id="hardLaborIncrease" type="button" onclick="incrementCondition('hardLabor', 1)"> + </button>
         </td>
     </tr>
 
@@ -143,9 +167,9 @@ function incrementCondition(condition, increment) {
         <td> Lasting Consequences </td>
         <td> Healing reduced by -<var id="lastingConsequencesEffect">0</var>%</td>
         <td>
-            <var id="lastingConsequencesHeat">0</var> 
-            <button id="lastingConsequencesIncrease" type="button" onclick="incrementCondition('lastingConsequences', 1)"> +1 </button>
-            <button id="lastingConsequencesDecrease" type="button" onclick="incrementCondition('lastingConsequences', -1)" disabled> -1 </button> 
+            <var id="lastingConsequencesHeat">0</var>
+            <button id="lastingConsequencesDecrease" type="button" onclick="incrementCondition('lastingConsequences', -1)" disabled> - </button>
+            <button id="lastingConsequencesIncrease" type="button" onclick="incrementCondition('lastingConsequences', 1)"> + </button> 
         </td>
     </tr>
 
@@ -153,9 +177,9 @@ function incrementCondition(condition, increment) {
         <td> Convenience Fee </td>
         <td> All prices higher by +<var id="convenienceFeeEffect">0</var>%</td>
         <td>
-            <var id="convenienceFeeHeat">0</var> 
-            <button id="convenienceFeeIncrease" type="button" onclick="incrementCondition('convenienceFee', 1)"> +1 </button>
-            <button id="convenienceFeeDecrease" type="button" onclick="incrementCondition('convenienceFee', -1)" disabled> -1 </button> 
+            <var id="convenienceFeeHeat">0</var>
+            <button id="convenienceFeeDecrease" type="button" onclick="incrementCondition('convenienceFee', -1)" disabled> - </button>
+            <button id="convenienceFeeIncrease" type="button" onclick="incrementCondition('convenienceFee', 1)"> + </button>
         </td>
     </tr>
 
@@ -164,8 +188,8 @@ function incrementCondition(condition, increment) {
         <td> More foes in standard encounters, by +<var id="jurySummonsEffect">0</var>%</td>
         <td>
             <var id="jurySummonsHeat">0</var> 
-            <button id="jurySummonsIncrease" type="button" onclick="incrementCondition('jurySummons', 1)"> +1 </button>
-            <button id="jurySummonsDecrease" type="button" onclick="incrementCondition('jurySummons', -1)" disabled> -1 </button> 
+            <button id="jurySummonsDecrease" type="button" onclick="incrementCondition('jurySummons', -1)" disabled> - </button>
+            <button id="jurySummonsIncrease" type="button" onclick="incrementCondition('jurySummons', 1)"> + </button>
         </td>
     </tr>
 
@@ -173,9 +197,9 @@ function incrementCondition(condition, increment) {
         <td> Extreme Measures </td>
         <td> More difficult boss fights, first <var id="extremeMeasuresEffect">0</var> fights</td>
         <td>
-            <var id="extremeMeasuresHeat">0</var> 
-            <button id="extremeMeasuresIncrease" type="button" onclick="incrementCondition('extremeMeasures', 1)"> +1 </button>
-            <button id="extremeMeasuresDecrease" type="button" onclick="incrementCondition('extremeMeasures', -1)" disabled> -1 </button> 
+            <var id="extremeMeasuresHeat">0</var>
+            <button id="extremeMeasuresDecrease" type="button" onclick="incrementCondition('extremeMeasures', -1)" disabled> - </button>
+            <button id="extremeMeasuresIncrease" type="button" onclick="incrementCondition('extremeMeasures', 1)"> + </button> 
         </td>
     </tr>
 
@@ -183,9 +207,9 @@ function incrementCondition(condition, increment) {
         <td> Calisthenics Program </td>
         <td> All foes have +<var id="calisthenicsProgramEffect">0</var>% more HP</td>
         <td>
-            <var id="calisthenicsProgramHeat">0</var> 
-            <button id="calisthenicsProgramIncrease" type="button" onclick="incrementCondition('calisthenicsProgram', 1)"> +1 </button>
-            <button id="calisthenicsProgramDecrease" type="button" onclick="incrementCondition('calisthenicsProgram', -1)" disabled> -1 </button> 
+            <var id="calisthenicsProgramHeat">0</var>
+            <button id="calisthenicsProgramDecrease" type="button" onclick="incrementCondition('calisthenicsProgram', -1)" disabled> - </button> 
+            <button id="calisthenicsProgramIncrease" type="button" onclick="incrementCondition('calisthenicsProgram', 1)"> + </button>
         </td>
     </tr>
 
@@ -193,9 +217,9 @@ function incrementCondition(condition, increment) {
         <td> Benefits Package </td>
         <td> Most armored foes have perks, +<var id="benefitsPackageEffect">0</var> perks</td>
         <td>
-            <var id="benefitsPackageHeat">0</var> 
-            <button id="benefitsPackageIncrease" type="button" onclick="incrementCondition('benefitsPackage', 1)"> +1 </button>
-            <button id="benefitsPackageDecrease" type="button" onclick="incrementCondition('benefitsPackage', -1)" disabled> -1 </button> 
+            <var id="benefitsPackageHeat">0</var>
+            <button id="benefitsPackageDecrease" type="button" onclick="incrementCondition('benefitsPackage', -1)" disabled> - </button> 
+            <button id="benefitsPackageIncrease" type="button" onclick="incrementCondition('benefitsPackage', 1)"> + </button>
         </td>
     </tr>
 
@@ -204,8 +228,8 @@ function incrementCondition(condition, increment) {
         <td> Each mini-boss has +<var id="middleManagementEffect">0</var> armored foes, or problems</td>
         <td>
             <var id="middleManagementHeat">0</var> 
-            <button id="middleManagementIncrease" type="button" onclick="incrementCondition('middleManagement', 1)"> +1 </button>
-            <button id="middleManagementDecrease" type="button" onclick="incrementCondition('middleManagement', -1)" disabled> -1 </button> 
+            <button id="middleManagementDecrease" type="button" onclick="incrementCondition('middleManagement', -1)" disabled> - </button> 
+            <button id="middleManagementIncrease" type="button" onclick="incrementCondition('middleManagement', 1)"> + </button>
         </td>
     </tr>
 
@@ -214,8 +238,8 @@ function incrementCondition(condition, increment) {
         <td> <var id="underworldCustomsEffect">0</var> boon(s) must be purged after each biome</td>
         <td>
             <var id="underworldCustomsHeat">0</var> 
-            <button id="underworldCustomsIncrease" type="button" onclick="incrementCondition('underworldCustoms', 1)"> +1 </button>
-            <button id="underworldCustomsDecrease" type="button" onclick="incrementCondition('underworldCustoms', -1)" disabled> -1 </button> 
+            <button id="underworldCustomsDecrease" type="button" onclick="incrementCondition('underworldCustoms', -1)" disabled> - </button> 
+            <button id="underworldCustomsIncrease" type="button" onclick="incrementCondition('underworldCustoms', 1)"> + </button>
         </td>
     </tr>
 
@@ -224,8 +248,8 @@ function incrementCondition(condition, increment) {
         <td> Foes have +<var id="forcedOvertimeEffect">0</var>% move and attack speed</td>
         <td>
             <var id="forcedOvertimeHeat">0</var> 
-            <button id="forcedOvertimeIncrease" type="button" onclick="incrementCondition('forcedOvertime', 1)"> +1 </button>
-            <button id="forcedOvertimeDecrease" type="button" onclick="incrementCondition('forcedOvertime', -1)" disabled> -1 </button> 
+            <button id="forcedOvertimeDecrease" type="button" onclick="incrementCondition('forcedOvertime', -1)" disabled> - </button> 
+            <button id="forcedOvertimeIncrease" type="button" onclick="incrementCondition('forcedOvertime', 1)"> + </button>
         </td>
     </tr>
 
@@ -234,8 +258,48 @@ function incrementCondition(condition, increment) {
         <td> Traps deal +<var id="heightenedSecurityEffect">0</var>% damage</td>
         <td>
             <var id="heightenedSecurityHeat">0</var> 
-            <button id="heightenedSecurityIncrease" type="button" onclick="incrementCondition('heightenedSecurity', 1)"> +1 </button>
-            <button id="heightenedSecurityDecrease" type="button" onclick="incrementCondition('heightenedSecurity', -1)" disabled> -1 </button> 
+            <button id="heightenedSecurityDecrease" type="button" onclick="incrementCondition('heightenedSecurity', -1)" disabled> - </button> 
+            <button id="heightenedSecurityIncrease" type="button" onclick="incrementCondition('heightenedSecurity', 1)"> + </button>
+        </td>
+    </tr>
+
+    <tr>
+        <td> Routine Inspection </td>
+        <td> The last <var id="routineInspectionEffect">0</var> mirror of night talents are deactivated</td>
+        <td>
+            <var id="routineInspectionHeat">0</var> 
+            <button id="routineInspectionDecrease" type="button" onclick="incrementCondition('routineInspection', -1)" disabled> - </button> 
+            <button id="routineInspectionIncrease" type="button" onclick="incrementCondition('routineInspection', 1)"> + </button>
+        </td>
+    </tr>
+
+    <tr>
+        <td> Damage Control </td>
+        <td> Foes have <var id="damageControlEffect">0</var> shields before they take damage</td>
+        <td>
+            <var id="damageControlHeat">0</var> 
+            <button id="damageControlDecrease" type="button" onclick="incrementCondition('damageControl', -1)" disabled> - </button> 
+            <button id="damageControlIncrease" type="button" onclick="incrementCondition('damageControl', 1)"> + </button>
+        </td>
+    </tr>
+
+    <tr>
+        <td> Approval Process </td>
+        <td> Boon selections have <var id="approvalProcessEffect">0</var> less choices</td>
+        <td>
+            <var id="approvalProcessHeat">0</var> 
+            <button id="approvalProcessDecrease" type="button" onclick="incrementCondition('approvalProcess', -1)" disabled> - </button> 
+            <button id="approvalProcessIncrease" type="button" onclick="incrementCondition('approvalProcess', 1)"> + </button>
+        </td>
+    </tr>
+
+    <tr>
+        <td> Tight Deadline </td>
+        <td> You have <var id="tightDeadlineEffect">0</var> minutes before taking 5 damage per second to clear each biome</td>
+        <td>
+            <var id="tightDeadlineHeat">inf</var> 
+            <button id="tightDeadlineDecrease" type="button" onclick="incrementCondition('tightDeadline', -1)" disabled> - </button> 
+            <button id="tightDeadlineIncrease" type="button" onclick="incrementCondition('tightDeadline', 1)"> + </button>
         </td>
     </tr>
 
