--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@ function startUp() {
 </script>
 
 
-<p> Share this heat setup: 
-    https://erikriiska.github.io/?h=<var id="shareHeat">0</var>
+<p> Share this heat setup: <br>
+     https://erikriiska.github.io/?h=<var id="shareHeat">0</var>
 </p>
 
 </body>
