--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
-  white-space: nowrap;
 }
 th, td {
   padding: 5px;
-  white-space: nowrap;
 }
 th {
   text-align: left;
-  white-space: nowrap;
 }
 </style>
 </head>
@@ -172,7 +169,7 @@ function startUp() {
 
 </script>
 
-<table style="width:100%">
+<table>
     <tr>
         <th>Condition</th>
         <th>Effect</th> 
